--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Isaac Krementsov",
   "license": "ISC",
   "dependencies": {
+    "cookie": "^0.3.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
