--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Isaac Krementsov",
   "license": "ISC",
   "dependencies": {
+    "cookie": "^0.3.1",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
@@ -17,6 +19,8 @@
     "mongoose": "^5.0.13",
     "node-random-name": "^1.0.1",
     "path": "^0.12.7",
-    "socket.io": "^2.1.0"
+    "socket.io": "^2.1.0",
+    "url": "^0.11.0",
+    "ws": "^5.1.1"
   }
 }
