--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie": "^0.3.1",
+    "cookie-parser": "^1.4.3",
+    "cookies": "^0.7.1",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
